# mbed-_development

./: .gitconfig  .gitignore  .gitmodules  ContainerCompose.yaml  Dockerfile  README.md  build_image.sh  generate_new_project.sh  requirements.txt  run.sh
.devcontainer/: devcontainer.json  mbed1.code-workspace  mbed1_nucleo_f411re.code-workspace
.ssh/: config  github_sshkey  github_sshkey.pub  known_hosts
Template/GitPatch/mbed-os/targets/TARGET_STM32F405xG/: flash_data.h  system_clock.c
Template/OnChipDebugger/: pyocd.yaml
Template/openocd/: openocd.cfg
Workspace/mbed1/: README.md
Workspace/mbed1/nucleo_f411re/: Makefile  VERSION  build_image.sh  main.cpp  openocd.cfg  requirements.txt
Workspace/mbed1/nucleo_f411re/.devcontainer/: devcontainer.json  mbed2_nucleo_f411re.code-workspace
Workspace/mbed1/nucleo_f411re/mbed-os/: CONTRIBUTING.md  DOXYGEN_FRONTPAGE.md  README.md  TESTS  UNITTESTS  cmsis  events  features  mbed.h  platform  requirements.txt  rtos  tools
Workspace/mbed1/pyboard_v11/: .mbed  CMakeLists.txt  Makefile  README.md  custom_targets.json  main.cpp  openocd.cfg  pyocd.yaml
Workspace/mbed1/pyboard_v11/TARGET_PYBOARD_V11/: CMakeLists.txt  PeripheralPinMaps.h  PinNames.h
Workspace/mbed1/pyboard_v11/backup/: pyocd.yaml
Workspace/mbed1/pyboard_v11/mbed-os/: CMakeLists.txt  Jenkinsfile  LICENSE-apache-2.0.txt  LICENSE.md  connectivity  docker_images  docs  doxyfile_options  doxygen_options.json  drivers  extern  hal  storage  targets
Workspace/mbed2/: README.md
Workspace/mbed2/nucleo_f411re/: CMakeLists.txt
(+2 files in other folders)
